--- a/src/app/devices/xenon-device/xenon-device.component.html
+++ b/src/app/devices/xenon-device/xenon-device.component.html
@@ -22,7 +22,7 @@
   
   <mat-grid-tile [colspan]="2" [style.background]="colors[1]">
     <mat-card *ngIf="device">
-      <resp-display [device]="device"></resp-display>
+      <episode-frame></episode-frame>
     </mat-card>
   </mat-grid-tile>
   <mat-grid-tile [style.background]="colors[2]">
