--- a/src/app/devices/interval/interval.component.html
+++ b/src/app/devices/interval/interval.component.html
@@ -23,24 +23,24 @@
 <hr>
 <div class="row">
   <div class="col-4">
-    Start:
+    Begin:
   </div>
   <div class="col-4">
-    {{ status.start | isoTime }}
+    {{ status.begin | isoTime }}
   </div>
   <div class="col-4">
-    {{ status.start | isoDate }}
+    {{ status.begin | isoDate }}
   </div>
 </div>
 <hr>
 <div class="row">
   <div class="col-4">
-    Stop:
+    End:
   </div>
   <div class="col-4">
-    {{ status.stop | isoTime }}
+    {{ status.end | isoTime }}
   </div>
   <div class="col-4">
-    {{ status.stop | isoDate }}
+    {{ status.end | isoDate }}
   </div>
 </div>
