Added parameter table

--- a/src/app/devices/devices.component.html
+++ b/src/app/devices/devices.component.html
@@ -3,7 +3,7 @@
 <mat-drawer-container class="example-container" autosize>
   <mat-drawer mode="side" opened="true" >
     
-    <mat-sidenav-container class="example-container">
+    <mat-sidenav-container>
       <mat-sidenav mode="side" opened>
         <mat-nav-list>
           <div *ngFor="let device of devices; let idx = index" >
