--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
     <a mat-button [routerLink]="'/home'"><mat-icon>home</mat-icon></a>
     <button mat-button [routerLink]="'/devices'" >Devices</button>
     <button mat-button [routerLink]="'/params'">Parameters</button>
+    <button mat-button [routerLink]="'/db'">Database</button>
     <button mat-button href="https://angular.io/tutorial/toh-pt5">Mat Navigation</button>
     <button mat-button href="https://blog.angular-university.io/angular-2-router-nested-routes-and-nested-auxiliary-routes-build-a-menu-navigation-system/">Nested Routes</button>
   </div>
