--- a/src/app/parameters/parameters.component.html
+++ b/src/app/parameters/parameters.component.html
@@ -52,9 +52,9 @@
         <td mat-cell *matCellDef="let param"> {{ param.format }} </td>
       </ng-container>
       
-      <ng-container matColumnDef="m">
+      <ng-container matColumnDef="m" >
         <th mat-header-cell *matHeaderCellDef> M </th>
-        <td mat-cell *matCellDef="let param"> {{ param.m }} </td>
+        <td mat-cell *matCellDef="let param" (click)="printRow(param)"> {{ param.m }} </td>
       </ng-container>
       
       <ng-container matColumnDef="ll">
