--- a/src/app/database/database.component.html
+++ b/src/app/database/database.component.html
@@ -1,8 +1,9 @@
 <mat-drawer-container class="example-container" autosize>
 <mat-drawer mode="side" opened="true" >
   <mat-sidenav-container>
-    <mat-nav-list style="width:200px;">
+    <mat-nav-list style="width:600px;">
       <div>Test item</div>
+      <episode-frame></episode-frame>
     </mat-nav-list>
   </mat-sidenav-container>
 </mat-drawer>
