--- a/src/app/parameters/parameters.component.html
+++ b/src/app/parameters/parameters.component.html
@@ -7,12 +7,8 @@
   </mat-sidenav-container>
 </mat-drawer>
 <mat-card>
-  <mat-card-title>Title</mat-card-title>
-  <mat-card-subtitle>Subtitle</mat-card-subtitle>
-  <mat-divider inset></mat-divider>
-  <mat-card-content>
-    Parameter component
-  </mat-card-content>
+  <mat-card-title>Medibus Parameters</mat-card-title>
+  <mat-card-subtitle>Parameter definition table along with Snomed-CT identifier</mat-card-subtitle>
   <mat-divider inset></mat-divider>
   <mat-card-content class="param-table border">
     <table mat-table [dataSource]="dataSource">
