--- a/src/app/database/episode-frame/episode-frame.component.html
+++ b/src/app/database/episode-frame/episode-frame.component.html
@@ -15,7 +15,13 @@
 
       <ng-container matColumnDef="value">
         <th mat-header-cell *matHeaderCellDef> Value </th>
-        <td mat-cell *matCellDef="let episode"> {{ episode.value.slice(0, 6) }} </td>
+        <td mat-cell *matCellDef="let episode" 
+          matTooltip="{{episode.value}}"
+          [matTooltipShowDelay]="500"
+          [matTooltipHideDelay]="100"
+          >
+          {{ episode.value.slice(0, 6) }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="begin">
