--- a/src/app/database/episode-frame/episode-frame.component.html
+++ b/src/app/database/episode-frame/episode-frame.component.html
@@ -1,7 +1,7 @@
 <p>Database episodes {{ episodes.length }}</p>
 
 <div class="table-container mat-elevation-z8">
-  <table mat-table [dataSource]="episodes" class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <!-- Position Column -->
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> ID </th>
@@ -38,7 +38,10 @@
       <tr mat-row *matRowDef="let row; columns: episodeColumns;"></tr>
       
     </table>
-
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+        showFirstLastButtons 
+        aria-label="Select page of parameters">
+    </mat-paginator>
   
 </div>
 
