Shifted Vent button into vent-table.component

--- a/src/app/devices/xenon-device/vent-table/vent-table.component.html
+++ b/src/app/devices/xenon-device/vent-table/vent-table.component.html
@@ -1,9 +1,18 @@
 <div class="row">
+  <div class="col-7">
+  
+  </div>
+  <div class="col-5">
+    <button mat-raised-button class="btn-success" (click)="getVentData()">Vent-Data</button>   
+  </div>
+</div>
+
+<div class="row">
   <div class="col-4">
     Message ID:  
   </div>
   <div class="col-4">
-    {{ device.vent.msgId }}
+    {{ ventData.msgId }}
   </div>
   <div class="col-4">
   </div>
@@ -13,10 +22,10 @@
     Time: 
   </div>
   <div class="col-4">
-    {{ device.vent.time | isoTime }}
+    {{ ventData.time | isoTime }}
   </div>
   <div class="col-4">
-    {{ device.vent.time | isoDate }}
+    {{ ventData.time | isoDate }}
   </div>
 </div>
 <hr>
@@ -25,7 +34,7 @@
     Tidalvolume
   </div>
   <div class="col-8">
-    {{ device.vent.respiration.tidalvolume }}
+    {{ ventData.respiration.tidalvolume }}
   </div>
 </div>
 
@@ -34,7 +43,7 @@
     Minutevolume
   </div>
   <div class="col-8">
-    {{ device.vent.respiration.minutevolume }}
+    {{ ventData.respiration.minutevolume }}
   </div>
 </div>
 <hr>
@@ -43,7 +52,7 @@
     F<sub>i</sub>O<sub>2</sub>
   </div>
   <div class="col-8">
-    {{ device.vent.gas.fio2 }}
+    {{ ventData.gas.fio2 }}
   </div>
 </div>
 
@@ -53,46 +62,46 @@
     E<sub>t</sub>CO<sub>2</sub>
   </div>
   <div class="col-8">
-    {{ device.vent.gas.feco2 }}
+    {{ ventData.gas.feco2 }}
   </div>
 </div>
 
 
-<div class="row" *ngIf="device.vent.inhalation.desflurane.insp !== null && device.vent.inhalation.desflurane.insp != 0">
+<div class="row" *ngIf="ventData.inhalation.desflurane.insp !== null && ventData.inhalation.desflurane.insp != 0">
   <div class="col-4">
     Desflurane
   </div>
   <div class="col-4">
-    I &nbsp; {{ device.vent.inhalation.desflurane.insp }}
+    I &nbsp; {{ ventData.inhalation.desflurane.insp }}
   </div>
   <div class="col-4">
-    E &nbsp; {{ device.vent.inhalation.desflurane.exp }}
+    E &nbsp; {{ ventData.inhalation.desflurane.exp }}
   </div>
 </div>
 
 
-<div class="row" *ngIf="device.vent.inhalation.sevoflurane.insp !== null && device.vent.inhalation.sevoflurane.insp != 0">
+<div class="row" *ngIf="ventData.inhalation.sevoflurane.insp !== null && ventData.inhalation.sevoflurane.insp != 0">
   <div class="col-4">
     Sevoflurane
   </div>
   <div class="col-4">
-    I &nbsp; {{ device.vent.inhalation.sevoflurane.insp }}
+    I &nbsp; {{ ventData.inhalation.sevoflurane.insp }}
   </div>
   <div class="col-4">
-    E &nbsp; {{ device.vent.inhalation.sevoflurane.exp }}
+    E &nbsp; {{ ventData.inhalation.sevoflurane.exp }}
   </div>
 </div>
 
 
 
-<div class="row" *ngIf="device.vent.inhalation.isoflurane.insp !== null && device.vent.inhalation.isoflurane.insp != 0">
+<div class="row" *ngIf="ventData.inhalation.isoflurane.insp !== null && ventData.inhalation.isoflurane.insp != 0">
   <div class="col-4">
     Isoflurane
   </div>
   <div class="col-4">
-    I &nbsp; {{ device.vent.inhalation.isoflurane.insp }}
+    I &nbsp; {{ ventData.inhalation.isoflurane.insp }}
   </div>
   <div class="col-4">
-    E &nbsp; {{ device.vent.inhalation.isoflurane.exp }}
+    E &nbsp; {{ ventData.inhalation.isoflurane.exp }}
   </div>
 </div>
