Added two way binding of episode-frame

--- a/src/app/database/episode-frame/episode-frame.component.html
+++ b/src/app/database/episode-frame/episode-frame.component.html
@@ -19,7 +19,7 @@
     </tr>
     <tr>
       <td>Selected episode:</td>
-      <td>{{ selectedEpisode?.value  }}</td>
+      <td>{{ episode?.value  }}</td>
     </tr>
   </table>
   
