--- a/src/app/database/database.component.html
+++ b/src/app/database/database.component.html
@@ -3,7 +3,7 @@
     <mat-card>
       <mat-card-title>Episodes</mat-card-title>
       <mat-card-content>
-        <episode-frame></episode-frame>
+        <episode-frame [(episode)]="currentEpisode" ></episode-frame>
       </mat-card-content>
     </mat-card>
   </mat-grid-tile>
@@ -13,7 +13,7 @@
       <mat-card-subtitle>(Subtitle)</mat-card-subtitle>
       <mat-divider inset></mat-divider>
       <mat-card-content>
-        Database component
+        Selected episode: {{ currentEpisode?.value }}
       </mat-card-content>
     </mat-card>
   </mat-grid-tile>
