--- a/src/app/database/resp-display/resp-display.component.html
+++ b/src/app/database/resp-display/resp-display.component.html
@@ -1,9 +1,20 @@
-<div>
-  <div *ngIf="episode">
-    <p>Episode: {{ episode.id }} </p>
+<mat-card >
+  <mat-card-title>Respiration data</mat-card-title>
+  <mat-card-subtitle>(Subtitle)</mat-card-subtitle>
+  <mat-divider inset></mat-divider>
+  <mat-card-content class="mt10" *ngIf="episode">
+    <form>
+    <p>Episode: {{ episode.id }}</p>
     <p>count: {{ resp.length }}</p>
-  </div>
-  <div *ngIf="!episode">
-    (No episode selected)
-  </div>
-</div>
+    <p>First record: {{ startTime }}</p>
+    <p>Last record: {{ endTime }}</p>
+      
+    </form>
+  </mat-card-content>
+  <mat-card-content class="mt10" *ngIf="!episode">
+    (No Episode selected)
+  </mat-card-content>
+</mat-card>
+
+
+
