--- a/src/app/database/database.component.html
+++ b/src/app/database/database.component.html
@@ -1,5 +1,5 @@
-<mat-grid-list cols="2">
-  <mat-grid-tile>
+<mat-grid-list cols="2" rows="2" rowHeight="400px">
+  <mat-grid-tile rowspan="2">
     <mat-card>
       <mat-card-title>Episodes</mat-card-title>
       <mat-card-content>
@@ -7,36 +7,32 @@
       </mat-card-content>
     </mat-card>
   </mat-grid-tile>
+  
+  <mat-grid-tile> 
+    <mat-card>
+      <mat-card-title>Database component</mat-card-title>
+      <mat-card-subtitle>Episode: {{currentEpisode?.id}}</mat-card-subtitle>
+      <mat-divider inset></mat-divider>
+      <mat-card-content class="mt10">
+        <episode-detail [(episode)]="currentEpisode"></episode-detail>
+      </mat-card-content>
+    </mat-card>
+  </mat-grid-tile>
+  
   <mat-grid-tile>
-    <table style="width:100%">
-      <tr>
-      <td>
-        
-        <mat-card>
-          <mat-card-title>Database component</mat-card-title>
-          <mat-card-subtitle>(Subtitle)</mat-card-subtitle>
-          <mat-divider inset></mat-divider>
-          <mat-card-content class="mt10">
-            <episode-detail [(episode)]="currentEpisode"></episode-detail>
-          </mat-card-content>
-        </mat-card>
-                
-      </td>
-      </tr>
-      <tr>
-        <td>
-        <resp-display [episode]="currentEpisode"></resp-display>
-      </td>
-      </tr>
-    </table>
-
-
-
-
-
-
-
-
-
+    <mat-card>
+      <mat-card-title>Respiration data</mat-card-title>
+      <mat-card-subtitle>
+        <div>
+          <div class="half-width">Episode: {{currentEpisode?.id}}</div>
+          <div class="half-width">Count: {{ currentEpisode?.count }}</div>
+        </div>
+      </mat-card-subtitle>
+      <mat-divider inset></mat-divider>
+      <mat-card-content class="mt10">
+        <resp-display [episode]="currentEpisode" *ngIf="currentEpisode"></resp-display>
+        <div *ngIf="!currentEpisode">(No Episode selected)</div>
+      </mat-card-content>
+    </mat-card>
   </mat-grid-tile>
 </mat-grid-list>
