--- a/src/app/database/resp-display/resp-display.component.html
+++ b/src/app/database/resp-display/resp-display.component.html
@@ -1,6 +1,5 @@
 <div>
   <form>
-
   <table class="full-width mt10"><tr>
     <td class="pr10">
       <mat-form-field appearance="fill" class="full-width">
@@ -18,6 +17,7 @@
     </td>
   </tr>
   </table>
+  <resp-chart [respData]="respData"></resp-chart>
   </form>
 </div>
 
