--- a/src/app/database/resp-display/resp-chart/resp-chart.component.html
+++ b/src/app/database/resp-display/resp-chart/resp-chart.component.html
@@ -1,6 +1,6 @@
 <mat-card>
 <mat-card-content *ngIf="respData">
-  <span>StartTime: {{ startTime.toISOString() | isoTime}} </span>
+  <span >StartTime: {{ startTime.toISOString() | isoTime}} </span>&nbsp;
   <span>EndTime: {{ endTime.toISOString() | isoTime }}</span>
   <canvas #chart></canvas>
 </mat-card-content>
