--- a/src/app/database/database.component.html
+++ b/src/app/database/database.component.html
@@ -28,7 +28,7 @@
   
   <mat-grid-tile> 
     <mat-card>
-      <mat-card-title>Database component</mat-card-title>
+      <mat-card-title>Episode Detail</mat-card-title>
       <mat-card-subtitle>Episode: {{currentEpisode?.id}}</mat-card-subtitle>
       <mat-divider inset></mat-divider>
       <mat-card-content class="mt10">
