--- a/src/app/database/resp-display/resp-display.component.html
+++ b/src/app/database/resp-display/resp-display.component.html
@@ -15,6 +15,9 @@
         <mat-hint>Timestamp of last record</mat-hint>
       </mat-form-field>
     </td>
+    <td class="center">
+      <button mat-button (click)="updateEpisodeTimes()">Update episode times</button>
+    </td>
   </tr>
   </table>
   <resp-chart [respData]="respData"></resp-chart>
