--- a/src/app/database/episode-frame/episode-frame.component.html
+++ b/src/app/database/episode-frame/episode-frame.component.html
@@ -33,38 +33,38 @@
     <!-- Position Column -->
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> ID </th>
-        <td mat-cell *matCellDef="let episode"> {{ episode.id }} </td>
+        <td mat-cell *matCellDef="let episode"> {{ episode.eid }} </td>
       </ng-container>
 
       <ng-container matColumnDef="device">
         <th mat-header-cell *matHeaderCellDef> Device </th>
-        <td mat-cell *matCellDef="let episode"> {{ episode.deviceid }} </td>
+        <td mat-cell *matCellDef="let episode"> {{ episode.edeviceid }} </td>
       </ng-container>
 
       <ng-container matColumnDef="count">
         <th mat-header-cell *matHeaderCellDef> Count </th>
-        <td mat-cell *matCellDef="let episode"> {{ episode.count }} </td>
+        <td mat-cell *matCellDef="let episode"> {{ episode.rcount }} </td>
       </ng-container>
 
       <ng-container matColumnDef="value">
         <th mat-header-cell *matHeaderCellDef> Value </th>
         <td mat-cell *matCellDef="let episode" 
-          matTooltip="{{episode.value}}"
+          matTooltip="{{episode.evalue}}"
           [matTooltipShowDelay]="500"
           [matTooltipHideDelay]="100"
           >
-          {{ episode.value.slice(0, 6) }}
+          {{ episode.evalue.slice(0, 6) }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="begin">
         <th mat-header-cell *matHeaderCellDef> Begin </th>
-        <td mat-cell *matCellDef="let episode"><div class="date-display">{{ episode.begin | localeDate }}</div> {{ episode.begin | localeTime}} </td>
+        <td mat-cell *matCellDef="let episode"><div class="date-display">{{ episode.ebegin | localeDate }}</div> {{ episode.ebegin | localeTime}} </td>
       </ng-container>
       
       <ng-container matColumnDef="end">
         <th mat-header-cell *matHeaderCellDef> End </th>
-        <td mat-cell *matCellDef="let episode"><div class="date-display">{{ episode.end | localeDate }}</div> {{ episode.end | localeTime }} </td>
+        <td mat-cell *matCellDef="let episode"><div class="date-display">{{ episode.eend | localeDate }}</div> {{ episode.eend | localeTime }} </td>
       </ng-container>
       
      
