--- a/src/app/database/resp-display/resp-display.component.html
+++ b/src/app/database/resp-display/resp-display.component.html
@@ -4,14 +4,14 @@
     <td>
       <mat-form-field appearance="fill" class="full-width">
         <mat-label>First Record</mat-label>
-        <input matInput disabled [(ngModel)]="displayStartTime" name="startTime"/>
+        <input matInput disabled [(ngModel)]="firstRecordTime" name="startTime"/>
         <mat-hint>Timestamp of first record</mat-hint>
       </mat-form-field>
     </td>   
     <td>
       <mat-form-field appearance="fill" class="full-width">
         <mat-label>Last Record</mat-label>
-        <input matInput disabled [(ngModel)]="displayEndTime" name="endTime"/>
+        <input matInput disabled [(ngModel)]="lastRecordTime" name="endTime"/>
         <mat-hint>Timestamp of last record</mat-hint>
       </mat-form-field>
     </td>
