--- a/src/app/devices/devices.component.css
+++ b/src/app/devices/devices.component.css
@@ -10,6 +10,11 @@ mat-drawer{
   padding: 10px;
 }
 
+.full-size {
+  width: 100%;
+  height: 100%;
+}
+
 .border {
   border-width: 1px;
   border-style: solid;
